saved project for myself

--- a/TARgv24C_SHARP.csproj
+++ b/TARgv24C_SHARP.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>TARgv24C_SHARP._2._Kordused.MainClass_2osa</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -43,7 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="2. Kordused\FunktsioonideClass_2osa.cs" />
+    <Compile Include="2. Kordused\Isik.cs" />
+    <Compile Include="2. Kordused\MainClass_2osa.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
